# alma-webhook-lambdas

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Pipfile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/: pull-request-template.md
.github/workflows/: dev-build.yml  dev_ecr_push.yml  prod-promote.yml  stage-build.yml
lambdas/: helpers.py  ping.py  webhook.py
tests/: conftest.py  test_helpers.py  test_webhook.py
tests/fixtures/: BURSAR_EXPORT_to_Dev1-12345678-99999999.xml
tests/integration/: test_webhook.py
